Ensure there is no horizontal scrolling

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -19,6 +19,10 @@ body {
   margin: 0;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 /* HTML5 display definitions
    ========================================================================== */
 
